# learning

data_science/: README.md
data_science/practical_data_science_book/: README.md  glossary.md  pyproject.toml
data_science/practical_data_science_book/BookGithub/python/notebooks/: Chapter 1 - Exploratory Data Analysis.ipynb
data_science/practical_data_science_book/Exploratory Data Analysis/: README.md  code.py
data_science/practical_data_science_book/code/R_Code/: code.r
data_science/practical_data_science_book/code/python/notebooks/: exploratory_data_analysis.ipynb
