[tool.poetry]
name = "practical-data-science-book"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "practical_data_science_book"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^1.5.3"
scipy = "^1.10.1"
ipykernel = "^6.21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
